# sifr

./: Cargo.toml  README.md
.cargo/: config.toml
src/: core.rs  lib.rs  simd.rs
src/core/: array.rs  array_dyn.rs  base.rs  macros.rs  storage.rs  storage_dyn.rs  traits.rs
src/core/traits/: num.rs
src/simd/: avx2.rs  avx512.rs  sse42.rs  x86_64.rs
src/simd/x86_64/: avx2.rs  avx512.rs  sse42.rs
