[package]
name = "sifr"
version = "0.0.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
authors = ["Yang Chen <matthiasychen@gmail.com>"]
homepage = "https://github.com/matthiascy/sifr"
repository = "https://github.com/matthiascy/sifr"
description = "A linear algebra and math library for games and graphics."

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["simd"]
simd = []
wasm = []
cuda = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
